--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="task04.h" />
     <ClInclude Include="task05.h" />
     <ClInclude Include="task06.h" />
+    <ClInclude Include="task07.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
