--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="task06.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="task07.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
