--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="task07.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="task09.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
